<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/imgLogo"
                    android:fontFamily="@font/bangers"
                    android:text="@string/question"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/imgLogo"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/custombutton"
                    android:text="@string/search"
                    android:fontFamily="@font/bangers"
                    android:textSize="16sp"
                    android:textAllCaps="false"/>
            </RelativeLayout>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="240dp">
        </androidx.viewpager.widget.ViewPager>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circleindicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:ci_drawable="@drawable/circle3"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bangers"
                android:text="@string/category"
                android:textSize="26sp" />
            <TextView
                android:id="@+id/btn_allfood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/viewall"
                android:textSize="18sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bangers"
            android:text="@string/favourite_food"
            android:textSize="26sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/empty_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/boxempty"
            android:visibility="visible"/>

    </LinearLayout>
</ScrollView>