<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="623dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:background="@drawable/frame"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/descrip"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtDesFoodDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <ImageView
                    android:id="@+id/imgFood"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/catemonchay"
                    android:transitionName="imgfood_transition"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTimeFoodDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="phút"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/baloo_tamma"
                android:text="@string/material"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtMaterialFoodDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/baloo_tamma"
                android:text="@string/making"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMakingFoodDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_timer_24"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="65dp"/>
                <ProgressBar
                    android:id="@+id/progress_time"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circle2"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/circle1"
                    android:rotation="-90"
                    android:layout_margin="10dp"
                    style="?android:progressBarStyleHorizontal" />
                <TextView
                    android:id="@+id/txt_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="00:00:00"
                    android:layout_marginLeft="40dp"/>
                <Button
                    android:id="@+id/btn_start_timer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginLeft="65dp"
                    android:background="@drawable/ic_baseline_play_circle_filled_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hẹn giờ nấu"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="45dp"
                    android:layout_toRightOf="@id/progress_time"/>
                <EditText
                    android:id="@+id/editText_Number"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/progress_time"
                    android:text="1"
                    android:background="@drawable/custom_edt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="phút"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="83dp"
                    android:layout_toRightOf="@id/editText_Number"/>

                <ToggleButton
                    android:id="@+id/favouritebutton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="onFavouriteClick"
                    android:textOn=""
                    android:textOff=""
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/toggle_select"/>
            </RelativeLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>